clusters/wrtk8s/rabble/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rabble
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
