clusters/wrtk8s/rabble/livekit-egress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: livekit-egress
  namespace: rabble
  labels:
    app: livekit-egress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: livekit-egress
  template:
    metadata:
      labels:
        app: livekit-egress
    spec:
      containers:
        - name: egress
          image: livekit/egress:latest
          imagePullPolicy: IfNotPresent
          entrypoint: ["/tini", "--"]
          command: ["egress", "--config", "/etc/livekit-egress.yaml"]
          volumeMounts:
            - name: livekit-egress-config
              mountPath: /etc/livekit-egress.yaml
              subPath: livekit-egress.yaml
              readOnly: true
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
      volumes:
        - name: livekit-egress-config
          configMap:
            name: livekit-egress-config
